--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap --config next-sitemap.config.js"
   },
   "dependencies": {
     "next": "12.0.7",
@@ -18,6 +19,7 @@
     "autoprefixer": "^10.4.2",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
+    "next-sitemap": "^1.9.9",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.13",
     "typescript": "4.5.4"
